@@ -548,6 +548,20 @@ begin_import
 import|import
 name|org
 operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|io
+operator|.
+name|IOUtils
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
 name|mortbay
 operator|.
 name|util
@@ -763,6 +777,22 @@ operator|.
 name|blob
 operator|.
 name|BlobRequestOptions
+import|;
+end_import
+
+begin_import
+import|import
+name|com
+operator|.
+name|microsoft
+operator|.
+name|azure
+operator|.
+name|storage
+operator|.
+name|blob
+operator|.
+name|BlobType
 import|;
 end_import
 
@@ -8660,6 +8690,21 @@ literal|"Cannot acquire new lease if one already exists."
 argument_list|)
 throw|;
 block|}
+name|CloudBlobWrapper
+name|srcBlob
+init|=
+literal|null
+decl_stmt|;
+name|CloudBlobWrapper
+name|dstBlob
+init|=
+literal|null
+decl_stmt|;
+name|SelfRenewingLease
+name|lease
+init|=
+literal|null
+decl_stmt|;
 try|try
 block|{
 comment|// Attempts rename may occur before opening any streams so first,
@@ -8703,14 +8748,13 @@ expr_stmt|;
 comment|// Get the source blob and assert its existence. If the source key
 comment|// needs to be normalized then normalize it.
 comment|//
-name|CloudBlobWrapper
 name|srcBlob
-init|=
+operator|=
 name|getBlobReference
 argument_list|(
 name|srcKey
 argument_list|)
-decl_stmt|;
+expr_stmt|;
 if|if
 condition|(
 operator|!
@@ -8736,11 +8780,6 @@ argument_list|)
 throw|;
 block|}
 comment|/**        * Conditionally get a lease on the source blob to prevent other writers        * from changing it. This is used for correctness in HBase when log files        * are renamed. It generally should do no harm other than take a little        * more time for other rename scenarios. When the HBase master renames a        * log file folder, the lease locks out other writers.  This        * prevents a region server that the master thinks is dead, but is still        * alive, from committing additional updates.  This is different than        * when HBase runs on HDFS, where the region server recovers the lease        * on a log file, to gain exclusive access to it, before it splits it.        */
-name|SelfRenewingLease
-name|lease
-init|=
-literal|null
-decl_stmt|;
 if|if
 condition|(
 name|acquireLease
@@ -8770,14 +8809,13 @@ block|}
 comment|// Get the destination blob. The destination key always needs to be
 comment|// normalized.
 comment|//
-name|CloudBlobWrapper
 name|dstBlob
-init|=
+operator|=
 name|getBlobReference
 argument_list|(
 name|dstKey
 argument_list|)
-decl_stmt|;
+expr_stmt|;
 comment|// Rename the source blob to the destination blob by copying it to
 comment|// the destination blob then deleting it.
 comment|//
@@ -8938,7 +8976,134 @@ name|StorageException
 name|e
 parameter_list|)
 block|{
-comment|// Re-throw exception as an Azure storage exception.
+if|if
+condition|(
+name|e
+operator|.
+name|getErrorCode
+argument_list|()
+operator|.
+name|equals
+argument_list|(
+name|StorageErrorCode
+operator|.
+name|SERVER_BUSY
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+condition|)
+block|{
+name|LOG
+operator|.
+name|warn
+argument_list|(
+literal|"Rename: CopyBlob: StorageException: ServerBusy: Retry complete, will attempt client side copy for page blob"
+argument_list|)
+expr_stmt|;
+name|InputStream
+name|ipStream
+init|=
+literal|null
+decl_stmt|;
+name|OutputStream
+name|opStream
+init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
+if|if
+condition|(
+name|srcBlob
+operator|.
+name|getProperties
+argument_list|()
+operator|.
+name|getBlobType
+argument_list|()
+operator|==
+name|BlobType
+operator|.
+name|PAGE_BLOB
+condition|)
+block|{
+name|ipStream
+operator|=
+name|openInputStream
+argument_list|(
+name|srcBlob
+argument_list|)
+expr_stmt|;
+name|opStream
+operator|=
+name|openOutputStream
+argument_list|(
+name|dstBlob
+argument_list|)
+expr_stmt|;
+name|byte
+index|[]
+name|buffer
+init|=
+operator|new
+name|byte
+index|[
+name|PageBlobFormatHelpers
+operator|.
+name|PAGE_SIZE
+index|]
+decl_stmt|;
+name|int
+name|len
+decl_stmt|;
+while|while
+condition|(
+operator|(
+name|len
+operator|=
+name|ipStream
+operator|.
+name|read
+argument_list|(
+name|buffer
+argument_list|)
+operator|)
+operator|!=
+operator|-
+literal|1
+condition|)
+block|{
+name|opStream
+operator|.
+name|write
+argument_list|(
+name|buffer
+argument_list|,
+literal|0
+argument_list|,
+name|len
+argument_list|)
+expr_stmt|;
+block|}
+name|opStream
+operator|.
+name|flush
+argument_list|()
+expr_stmt|;
+name|opStream
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|ipStream
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+else|else
+block|{
 throw|throw
 operator|new
 name|AzureException
@@ -8946,6 +9111,64 @@ argument_list|(
 name|e
 argument_list|)
 throw|;
+block|}
+name|safeDelete
+argument_list|(
+name|srcBlob
+argument_list|,
+name|lease
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|StorageException
+name|se
+parameter_list|)
+block|{
+name|LOG
+operator|.
+name|warn
+argument_list|(
+literal|"Rename: CopyBlob: StorageException: Failed"
+argument_list|)
+expr_stmt|;
+throw|throw
+operator|new
+name|AzureException
+argument_list|(
+name|se
+argument_list|)
+throw|;
+block|}
+finally|finally
+block|{
+name|IOUtils
+operator|.
+name|closeStream
+argument_list|(
+name|ipStream
+argument_list|)
+expr_stmt|;
+name|IOUtils
+operator|.
+name|closeStream
+argument_list|(
+name|opStream
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+else|else
+block|{
+throw|throw
+operator|new
+name|AzureException
+argument_list|(
+name|e
+argument_list|)
+throw|;
+block|}
 block|}
 catch|catch
 parameter_list|(
